fix: map is not showing

--- a/src/cell/carto.less
+++ b/src/cell/carto.less
@@ -69,9 +69,9 @@
     }
 }
 
-.map-container {
-    height: 100%;
-}
+// .map-container {
+//     height: 100%;
+// }
 
 .carto-css .input-wrap {
     transition: 1s;
